--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   fluttertoast: ^8.0.8
+  font_awesome_flutter: ^8.2.0
+  dio: ^1.0.13
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - images/buslogo.png
-  #   - images/a_dot_ham.jpeg
+     - images/odabus.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
